[package]
name = "quic-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quiche = "0.16.0"
ring = "0.16.20"
mio = { version = "0.8", features = ["net", "os-poll"] }
url = "2.3.1"
log = { version = "0.4", features = ["std"] }
chrono = "0.4.22"


[dev-dependencies]
